--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>My Favorite Bands</h1>
+    <ul id="band-list"></ul>
     <script src="main.js"></script>
   </body>
 </html>
